# setloom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.acestep.toml  pyproject.toml
.codex/: config.toml
.github/workflows/: pages.yml
LICENSES/: NOTICE  TRADEMARKS.md
docs/: README.md  licensing.md  project-charter.md  research-plan.md  roadmap.md  style-grammar.md  tooling.md  workflow.md
examples/tracks/T01/: listening-notes.yml  spec.yml
examples/tracks/T02/: release-notes.md  spec.yml
examples/tracks/T03/: listening-notes.yml  spec.yml
examples/tracks/T04/: vocal-brief.md
harness/prompts/: README.md  listening-critic.md  set-compiler.md  style-grammar-researcher.md  track-generator.md
music/T5-lux-in-umbra/: .gitignore  README.md  export_midi.py  render.py
music/T5-lux-in-umbra/artwork/: cover-spec.md
music/T5-lux-in-umbra/harness/: README.md  __init__.py  bass.py  bed.py  context.py  dsp.py  events.py  kick.py  midi_export.py  piano.py  pluck.py  runner.py  texture.py
music/T5-lux-in-umbra/source/: README.md  kick-synth.json  manifest.json  mix-plan.json  pluck-synth.json  remapped-bass-events.json  score.json
music/T5-lux-in-umbra/source/midi/: README.md  full-arrangement.mid  lane-bass.mid  lane-kick.mid  lane-piano.mid  lane-pluck.mid  lane-support.mid
music/archive/T04/: assemble.py  production.yml  test_t04_production.py  vocal-brief.md
music/archive/T04/tools/: detect_vocal_breaths.py
music/packs/melodic-progressive-techno/: anatomy-findings.md  component-glossary.md  dossier-guide.md  findings.md  generation-recipes.md  listening-worksheet.md  style.yml  taste-lexicon.md
music/packs/melodic-progressive-techno/corpus/: README.md  colyn.yml  miss-monique.yml
music/packs/melodic-progressive-techno/reviews/: README.md  codex-cross-model-review-2026-06-07.md
music/tracks/T04/: assemble.py  listening-notes.yml  production.yml  spec.yml  vocal-brief.md
music/tracks/T04/tools/: render_vocal_audit.py  repair_vocal_breaths.py
music/tracks/T05/: brief.md  listening-notes.yml  spec.yml
render/: patches.scd
research/melodic-progressive-techno/: anatomy-findings.md  component-glossary.md  dossier-guide.md  findings.md  generation-recipes.md  listening-worksheet.md  taste-lexicon.md
research/melodic-progressive-techno/corpus/: 8kays.yml  adriatique.yml  arodes.yml  colyn.yml  enai.yml  innellea.yml  jan-blomqvist.yml  jono-stephenson.yml  marino-canal.yml  massano.yml  whomadewho.yml
research/melodic-progressive-techno/reviews/: codex-mix-architecture-2026-06-07.md
scripts/: detect_vocal_breaths.py  generate_candidate.py  magenta_smoke.py  plot_audio_wave_spec.py  render_t04_vocal_audit.py  repair_vocal_breaths.py
site/: index.html
src/setloom/: __init__.py  audio.py  cli.py  conductor.py  generate.py  grooveboost.py  hygiene.py  inspection.py  leadreplace.py  midi.py  scaffold.py  schema.py  scrender.py  stylepack.py
src/setloom/anatomy/: __init__.py  analysis.py  corpus.py  layers.py  pipeline.py  score.py  separate.py
src/setloom/anatomy/roformer/: __init__.py  attend.py  bs_roformer.py  infer.py
src/setloom/parts/: __init__.py  arp.py  base.py  bass.py  chords.py  clap_ride.py  counterline.py  drums.py  fills.py  fx.py  lead.py  pad.py  shaker.py
src/setloom/transcription/: __init__.py  basic_pitch.py
style-packs/melodic-progressive-techno/: generation-recipes.md  listening-worksheet.md  style.yml
style-packs/melodic-progressive-techno/corpus/: 8kays.yml  enai.yml
tests/: test_anatomy.py  test_audio.py  test_conductor.py  test_gate.py  test_generate.py  test_inspection.py  test_layers.py  test_parts.py  test_scaffold.py  test_schema.py  test_score.py  test_scrender.py  test_t04_production.py  test_transcription.py
tests/fixtures/: broken-missing-bpm.yml  broken-sections-mismatch.yml  broken-wrong-type.yml  gate-bpm-138.yml  spec-t01.yml  spec-t02.yml
tracks/T01/: spec.yml
tracks/T02/: release-notes.md
tracks/T04/: lyrics.la.txt
