# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "setloom"
version = "0.1.0"
description = "Open-source, keyboard-first tool and agentic harness for generating, tuning, mixing, and sequencing club tracks and DJ sets."
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0", "matplotlib>=3.7", "mido>=1.3", "numpy>=2.4.6",
    "pedalboard>=0.9.23", "pydantic>=2.7", "pyloudnorm>=0.2.0", "pyyaml>=6.0",
    "scipy>=1.17.1", "soundfile>=0.14.0",
]

[project.scripts]
setloom = "setloom.cli:run"

[dependency-groups]
anatomy = ["beartype>=0.22.9", "einops>=0.8.2", "essentia==2.1b6.dev1389", "rotary-embedding-torch>=0.8.9", "torch>=2.12.0", "torchfcpe>=0.0.4"]
dev = ["pytest>=8.0", "ruff>=0.4"]
transcription = ["basic-pitch==0.4.0; sys_platform == 'darwin'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setloom"]

[[tool.uv.dependency-metadata]]
name = "basic-pitch"
version = "0.4.0"
requires-python = ">=3.11"
requires-dist = [
    "coremltools; sys_platform == 'darwin'", "librosa>=0.8.0", "mir-eval>=0.6",
    "numpy>=1.18", "pretty-midi>=0.2.9", "resampy>=0.2.2,<0.4.3",
    "scikit-learn", "scipy>=1.4.1", "typing-extensions",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
